--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-bootstrap": "^1.1.2",
     "components-font-awesome": "^4.5.0",
     "angular-resource": "^1.5.0",
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "angular-ui-tree": "^2.15.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
