--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "components-font-awesome": "^4.5.0",
     "angular-resource": "^1.5.0",
     "bootstrap-sass": "^3.3.6",
-    "angular-ui-tree": "^2.15.0"
+    "angular-ui-tree": "^2.15.0",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
